--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "http://fvckdesa.github.io/UML",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
     "test:coverage": "vitest --coverage",
-    "test:ui": "vitest --ui --open"
+    "test:ui": "vitest --ui --open",
+    "predeploy": "pnpm build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
@@ -34,6 +37,7 @@
     "@vitest/coverage-c8": "^0.25.2",
     "@vitest/ui": "^0.25.2",
     "autoprefixer": "^10.4.13",
+    "gh-pages": "^4.0.0",
     "jsdom": "^20.0.2",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
