--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": "http://fvckdesa.github.io/UML",
   "scripts": {
     "dev": "vite",
+    "dev:host": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
