--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "dev:host": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest",
-    "test:coverage": "vitest --coverage",
-    "test:ui": "vitest --ui --open",
     "predeploy": "pnpm build",
     "deploy": "gh-pages -d dist"
   },
@@ -27,23 +24,15 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
-    "@types/testing-library__jest-dom": "^5.14.5",
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^2.2.0",
-    "@vitest/coverage-c8": "^0.25.2",
-    "@vitest/ui": "^0.25.2",
     "autoprefixer": "^10.4.13",
     "gh-pages": "^4.0.0",
-    "jsdom": "^20.0.2",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.6.4",
-    "vite": "^3.2.3",
-    "vitest": "^0.25.2"
+    "vite": "^3.2.3"
   }
 }
