--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
       "@src/*": ["./src/*"]
     }
   },
-  "include": ["src", "test"],
+  "include": ["src"],
   "exclude": ["node_modules"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
