--- a/package.json
+++ b/package.json
@@ -20,13 +20,11 @@
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.39.4",
-    "uuid": "^9.0.0"
+    "react-hook-form": "^7.39.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
-    "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
     "gh-pages": "^4.0.0",
