--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.4",
     "react-redux": "^8.0.5",
+    "screenfull": "^6.0.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
